# ps3recomp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml
docs/: broad-testing-findings.md  drill-down-3d-stardust.md
libs/spurs/: cellSpurs.c
libs/video/: rsx_commands.c
runtime/ppu/: ppu_loader.cpp
runtime/ppu/tests/: boot_main.cpp
runtime/ppu/tests/fixtures/: ppu_recomp.h
runtime/prx/tests/: test_prx_loader.cpp
runtime/spu/tests/: gen_test_bringup.py  gen_test_event.py  gen_test_lfqueue.py  gen_test_workload.py  run_one.sh  run_tests.sh  test_bringup_main.c  test_event_main.c  test_lfqueue.deps  test_lfqueue_main.c  test_workload.deps  test_workload_main.c
tools/: nid_database.py  ppu_lifter.py  spu_lifter.py
